--- a/index.html
+++ b/index.html
@@ -105,12 +105,14 @@
     }
     
     /* Lists */
-    
-    ol {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    }
+  
+  li, p {
+    line-height: 1.5;
+  }
+  ul, p {
+    margin-top: 1.6rem;
+    margin-bottom: 1.6rem;
+  }
     ul {
     list-style-type: square;
     }
